RM-1_2:  Initial matrix module
https://gyazo.com/abc83be8603c50be1d13ccc97f40da46

--- a/src/assets/sass/colors.scss
+++ b/src/assets/sass/colors.scss
@@ -1,2 +1,4 @@
-$color-bg: #f0f3f6;
-$color-bg-header: #223B63;
+$selago: #f2f5fd;
+$dodge-blue: #1786ff;
+$athens-gray: #e5e5ea;
+$athens-gray2: #f2f2f7;
