RM-1_2: Initial matrix and fonts
https://gyazo.com/e535c9f5caae0169b1f02fc40d841866

--- a/src/app/pages/initial-matrix/initial-matrix.component.html
+++ b/src/app/pages/initial-matrix/initial-matrix.component.html
@@ -1,10 +1,10 @@
 <div class="initial-matrix">
   <div class="box">
     <span class="icon">
-      <span class="risk-icon-trash"></span>
+      <span class="risk-icon-edit-note"></span>
     </span>
     <h3 class="title">No matrix se for this project yet</h3>
-    <p class="description">You will need to set up the Risk Matrix and the Risk Register table. Follow th steps in the screen to complete the setup.</p>
+    <p class="description">You will need to set up the Risk Matrix and the Risk Register table. Follow the steps <br> on the screen to complete the setup.</p>
     <ol class="decimal-style">
       <li>Select a type off matrix to use</li>
       <li>Set up the layout off the Risk Register table</li>
