--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
   <a href="javascript:;" class="logo">
-    <img src="assets/images/logo.png" alt="risk company">
+    <img src="assets/images/logo.svg" alt="risk company">
   </a>
 </div>
