--- a/src/app/pages/initial-matrix/initial-matrix.component.scss
+++ b/src/app/pages/initial-matrix/initial-matrix.component.scss
@@ -5,12 +5,13 @@
   display: flex;
   justify-content: center;
   .box {
-    border: 2px dashed $athens-gray;
+    border: 3px dashed $athens-gray;
     padding: 72px 100px 80px;
     display: flex;
     align-items: center;
     flex-direction: column;
-    max-width: 1012px;
+    width: 1012px;
+    position: relative;
     .icon {
       width: 160px;
       height: 160px;
@@ -55,6 +56,83 @@
           font-weight: 500;
         }
       }
+    }
+    .close {
+      display: inline-flex;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background-color: $athens-gray2;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;
+      position: absolute;
+      right: 24px;
+      top: 24px;
+      cursor: pointer;
+    }
+    .matrix-options {
+      margin-top: 85px;
+      margin-bottom: 60px;
+      .ask-question {
+        font-size: 18px;
+        [class*='risk-icon-'] {
+          font-size: 12px;
+        }
+      }
+      .left {
+        padding-right: 40px;
+        .ask-question {
+          text-align: right;
+        }
+      }
+      .right {
+        padding-left: 40px;
+        border-left: 2px solid $athens-gray;
+      }
+    }
+    .custom-radio {
+      display: flex;
+      align-items: center;
+      margin: 8px 0;
+      span {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        background-color: white;
+        border: 2px solid $athens-gray;
+        margin-right: 12px;
+      }
+      .custom-control-input {
+        display: none;
+        &:checked + span {
+          &:before {
+            content: '';
+            border-radius: 50%;
+            display: inline-block;
+            width: 8px;
+            height: 8px;
+            background-color: $dodge-blue;
+          }
+        }
+      }
+    }
+    .btn-create {
+      background-color: $curious-blue;
+      width: 158px;
+      height: 48px;
+      border: none;
+      border-radius: 5px;
+      font-size: 14px;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: white;
+      margin-top: 25px;
+      cursor: pointer;
     }
   }
 }
