--- a/src/assets/sass/reset.scss
+++ b/src/assets/sass/reset.scss
@@ -1,4 +1,5 @@
 @import 'fonts';
+@import 'global.scss';
 
 /* =Reset default browser CSS.
 -------------------------------------------------------------- */
