--- a/src/assets/sass/colors.scss
+++ b/src/assets/sass/colors.scss
@@ -3,3 +3,5 @@ $dodge-blue: #1786ff;
 $athens-gray: #e5e5ea;
 $athens-gray2: #f2f2f7;
 $jumbo: #707075;
+$bg-gray: #F8F8FB; /*form controls area, set up matrix menu*/
+$text-gray:#8E8E93; /*form controls area label text*/
