RM-3: Tab router
https://gyazo.com/604babe5b200cc2163c87dd86de48e21

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,4 +2,8 @@
   <a href="javascript:;" class="logo">
     <img src="assets/images/logo.svg" alt="risk company">
   </a>
+  <p class="command" *ngIf="!hasRoute('initial-matrix')">
+    <span class="risk-icon-command"></span>
+    Keyboard shortcuts
+  </p>
 </div>
