--- a/src/assets/sass/colors.scss
+++ b/src/assets/sass/colors.scss
@@ -1,3 +1,5 @@
+$white: #fff;
+$black: #000;
 $selago: #f2f5fd;
 $dodge-blue: #1786ff;
 $athens-gray: #e5e5ea;
@@ -6,4 +8,7 @@ $jumbo: #707075;
 $bg-gray: #F8F8FB; /*form controls area, set up matrix menu*/
 $text-gray:#8E8E93; /*form controls area label text*/
 $curious-blue: #22A8D8;
+$emerald: #4CD964;
+$dodger-blue: #4891FF;
+$mercury: #E6E6E6;
 
