--- a/src/app/shared/components/tab-router/tab-router.component.scss
+++ b/src/app/shared/components/tab-router/tab-router.component.scss
@@ -4,6 +4,22 @@
 :host {
   @include flex(stretch, null, null, nowrap);
   background-color: $dodger-blue;
-  overflow: auto;
+  position: relative;
   height: 100%;
+
+  .rm-sub-tab {
+    background-color: $white;
+    border-bottom: 1px solid $athens-gray3;
+  }
+  .options {
+    position: absolute;
+    right: 40px;
+    top: 17px;
+    .cancel {
+      font-size: 14px;
+      color: $white;
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+  }
 }
