RM-3: Table legend
https://gyazo.com/358a0e9ada50555dd705d9b08be71dde

--- a/src/app/pages/setup-matrix/setup-matrix.component.html
+++ b/src/app/pages/setup-matrix/setup-matrix.component.html
@@ -3,3 +3,12 @@
 <app-tab-router
   [routes]="subRoutes" subTab="true"></app-tab-router>
 <app-controls-area></app-controls-area>
+<app-legend-table [ranks]="legend"></app-legend-table>
+<app-checkbox
+  [(ngModel)]="true"
+></app-checkbox>
+<!-- <app-table
+  [(selectAll)]="selectAll"
+  [columns]="columns"
+  [data]="displayableData"
+  [totalColumnLength]="10"></app-table> -->
