--- a/src/assets/sass/colors.scss
+++ b/src/assets/sass/colors.scss
@@ -12,4 +12,6 @@ $emerald: #4CD964;
 $dodger-blue: #4891FF;
 $mercury: #E6E6E6;
 $athens-gray3: #EBEBF3;
+$red-orange: #FF3B30;
+$supernova: #FFCC00;
 
