--- a/src/assets/sass/colors.scss
+++ b/src/assets/sass/colors.scss
@@ -6,4 +6,7 @@ $jumbo: #707075;
 $bg-gray: #F8F8FB; /*form controls area, set up matrix menu*/
 $text-gray:#8E8E93; /*form controls area label text*/
 $curious-blue: #22A8D8;
-
+$field-focus: #4891FF;
+$red: red;
+$black: #000;
+$white: #fff;
