RM-3: implement legend and checkbox
https://gyazo.com/313efa40796b0716b863c41bf373b3bd

--- a/src/app/shared/components/checkbox/checkbox.component.scss
+++ b/src/app/shared/components/checkbox/checkbox.component.scss
@@ -33,8 +33,9 @@
     background-color: $dodger-blue;
 
     [class*='risk-icon-'] {
+      font-size: 12px;
       display: inline-block;
-      color: $black;
+      color: $white;
     }
   }
 
