--- a/src/app/pages/setup-matrix/setup-matrix.component.html
+++ b/src/app/pages/setup-matrix/setup-matrix.component.html
@@ -4,11 +4,4 @@
   [routes]="subRoutes" subTab="true"></app-tab-router>
 <app-controls-area></app-controls-area>
 <app-legend-table [ranks]="legend"></app-legend-table>
-<app-checkbox
-  [(ngModel)]="true"
-></app-checkbox>
-<!-- <app-table
-  [(selectAll)]="selectAll"
-  [columns]="columns"
-  [data]="displayableData"
-  [totalColumnLength]="10"></app-table> -->
+<app-checkbox [ngModel]="true"></app-checkbox>
