--- a/src/app/shared/components/select/select.component.scss
+++ b/src/app/shared/components/select/select.component.scss
@@ -1,3 +1,4 @@
+@import "mixins";
 @import "colors";
 
 :host {
@@ -7,23 +8,19 @@
 
 // select
 .ts-select {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  @include flex(center, space-between);
+  @include border(1px solid $athens-gray);
   flex-wrap: wrap;
   box-sizing: border-box;
   background-color: #fff;
   border-radius: 4px;
   height: 40px;
   padding: 10px 16px;
-  border: 1px solid $athens-gray;
   cursor: pointer;
 
   // set label flex properties
   .ts-select-label {
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: 0;
+    @include itemFlex(1, 1, 0);
   }
 
   // icon margin
@@ -37,7 +34,7 @@
 
   // opened
   &.ts-opened {
-    border: 1px solid $field-focus;
+    @include borderBottom(1px solid $field-focus);
 
     // opened icon
     svg, span.risk-icon-arrow-bottom {
@@ -75,9 +72,7 @@
 
 // select label
 .ts-select-label {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
+  @include ellipsis;
   max-width: calc(100% - 36px);
   font-size: 14px;
   font-weight: 400;
@@ -127,13 +122,10 @@ $select-options-max-height: calc(#{$select-option-height} * 5);
   ::ng-deep {
     // option item
     app-option {
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
+      @include ellipsis;
+      @include padding(0 10px);
+      @include flex(center);
       box-sizing: border-box;
-      padding: 0 10px;
-      display: flex;
-      align-items: center;
       flex-wrap: wrap;
       width: 100%;
       font-size: 14px;
