risk-matrix-table

--- a/src/app/pages/setup-matrix/setup-matrix.component.html
+++ b/src/app/pages/setup-matrix/setup-matrix.component.html
@@ -2,4 +2,5 @@
   [routes]="routes" options="true"></app-tab-router>
 <app-tab-router
   [routes]="subRoutes" subTab="true"></app-tab-router>
-<app-controls-area></app-controls-area>
+<app-controls-area (setupMatrix)="setMatrix($event)"></app-controls-area>
+<app-matrix-table></app-matrix-table>
