--- a/src/app/pages/setup-matrix/setup-matrix.component.html
+++ b/src/app/pages/setup-matrix/setup-matrix.component.html
@@ -5,3 +5,4 @@
 <app-controls-area></app-controls-area>
 <app-legend-table [ranks]="legend"></app-legend-table>
 <app-checkbox [ngModel]="true"></app-checkbox>
+<button (click)="openModal()">open modal</button>
